syntax = "proto3";

package intr.v1;

option go_package = "bbs-micro/api/proto/gen/interactive/v1;intrv1";
// 生成的代码放到bbs-micro/api/proto/gen/interactive/v1 并取别名为 intrv1


service InteractiveService{
  rpc IncrReadCnt(IncrReadCntRequest) returns(IncrReadCntResponse);
  rpc   Like(LikeRequest) returns (LikeResponse);
  rpc   CancelLike(CancelLikeRequest) returns (CancelLikeResponse);
  rpc   CollectArt(CollectArtRequest) returns(CollectArtResponse);
  rpc   Get(GetRequest) returns(GetResponse);
  rpc GetByIds(GetByIdsRequest)returns (GetByIdsResponse);
}
message IncrReadCntRequest{
  string biz = 1;
  //  protobuf 推荐使用下划线，而非驼峰命名(也可以使用)
  int64 biz_id = 2;
}
message IncrReadCntResponse{
  // 有些企业的规范
  //  int32 code = 1;
  //  string msg = 2;
}


message LikeRequest {
  string biz = 1;
  int64 biz_id = 2;
  int64 uid = 3;
}
message LikeResponse{
}


message CancelLikeRequest{
  string biz = 1;
  int64 biz_id = 2;
  int64 uid = 3;
}
message CancelLikeResponse {

}

message CollectArtRequest{
  string biz = 1;
  int64 biz_id = 2;
  int64 uid = 3;
  int64 cid = 4;
}
message CollectArtResponse{

}

message GetRequest{
  string biz = 1;
  int64 biz_id = 2;
  int64 uid = 3;
}

message Interactive{

}
message GetResponse{
  Interactive intr = 1;
}

message GetByIdsRequest{
  string biz = 1;
  repeated int64 ids = 2;
}
message GetByIdsResponse{
  map<int64, Interactive> intrs = 1;
}